--- a/book/src/main/resources-filtered/META-INF/resources/section/bom/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/section/bom/changelog.jspx
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-section-bom - Bill of Materials (BOM) for SemanticCMS Section features.
-Copyright (C) 2019  AO Industries, Inc.
+Copyright (C) 2019, 2020  AO Industries, Inc.
     support@aoindustries.com
     7262 Bull Pen Cir
     Mobile, AL 36695
@@ -36,7 +36,7 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2019-06-11T02:41:43-0500"
-		dateModified="2019-10-12T00:35:06-0500"
+		dateModified="2020-02-14T00:41:31-0600"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.semanticcms:semanticcms-section-bom:pom.version}" />
@@ -51,7 +51,13 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 				groupId="@{documented.groupId}"
 				artifactId="@{documented.artifactId}"
 				scmUrl="@{documented.scm.url}"
-			/>
+			>
+				<ul>
+					<li>Updated version of <core:link book="/section/all" page="/index.jspx" />.</li>
+					<li>Updated version of <core:link book="/section/servlet" page="/index.jspx" />.</li>
+					<li>Updated version of <core:link book="/section/taglib" page="/index.jspx" />.</li>
+				</ul>
+			</changelog:release>
 		</c:if>
 
 		<changelog:release
