Optimized ServletContext attribute initialization and concurrency.

--- a/book/src/main/resources-filtered/META-INF/resources/section/bom/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/section/bom/changelog.jspx
@@ -37,7 +37,7 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2019-06-11T02:41:43-0500"
-		dateModified="2020-02-14T00:41:31-0600"
+		dateModified="2020-02-26T13:30:29-0600"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.semanticcms:semanticcms-section-bom:pom.version}" />
@@ -56,6 +56,7 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 				<ul>
 					<li>Updated version of <core:link book="/section/all" page="/index.jspx" />.</li>
 					<li>Updated version of <core:link book="/section/servlet" page="/index.jspx" />.</li>
+					<li>Updated version of <core:link book="/section/style" page="/index.jspx" />.</li>
 					<li>Updated version of <core:link book="/section/taglib" page="/index.jspx" />.</li>
 				</ul>
 			</changelog:release>
