--- a/book/src/main/resources-filtered/META-INF/resources/section/bom/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/section/bom/changelog.jspx
@@ -49,9 +49,9 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 			<changelog:release
 				projectName="@{documented.name}"
 				version="#{version}"
-				groupId="@{documented.groupId}"
+				groupId="@{project.groupId}"
 				artifactId="@{documented.artifactId}"
-				scmUrl="@{documented.scm.url}"
+				scmUrl="@{project.scm.url}"
 			/>
 		</c:if>
 
@@ -59,9 +59,9 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 			projectName="@{documented.name}"
 			version="1.4.0"
 			datePublished="2019-10-12T00:35:06-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Updated version of <core:link book="/section/all" page="/" />.</li>
@@ -75,9 +75,9 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 			projectName="@{documented.name}"
 			version="1.3.0"
 			datePublished="2019-06-22T09:02:02-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>
