--- a/book/src/main/resources-filtered/META-INF/resources/section/bom/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/section/bom/changelog.jspx
@@ -37,7 +37,7 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2019-06-11T02:41:43-0500"
-		dateModified="2020-02-26T13:30:29-0600"
+		dateModified="2020-03-07T06:01:29-0600"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.semanticcms:semanticcms-section-bom:pom.version}" />
@@ -49,11 +49,15 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 			<changelog:release
 				projectName="@{documented.name}"
 				version="#{version}"
-				groupId="@{documented.groupId}"
+				groupId="@{project.groupId}"
 				artifactId="@{documented.artifactId}"
-				scmUrl="@{documented.scm.url}"
+				scmUrl="@{project.scm.url}"
 			>
 				<ul>
+					<li>
+						Reduced use of property substitutions in <code>pom.xml</code>.
+						This is to help 3rd-party parsers that fail to perform full Maven-compatible substitutions.
+					</li>
 					<li>Updated version of <core:link book="/section/all" page="/index.jspx" />.</li>
 					<li>Updated version of <core:link book="/section/servlet" page="/index.jspx" />.</li>
 					<li>Updated version of <core:link book="/section/style" page="/index.jspx" />.</li>
@@ -66,9 +70,9 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 			projectName="@{documented.name}"
 			version="1.4.0"
 			datePublished="2019-10-12T00:35:06-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Updated version of <core:link book="/section/all" page="/index.jspx" />.</li>
@@ -82,9 +86,9 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 			projectName="@{documented.name}"
 			version="1.3.0"
 			datePublished="2019-06-22T09:02:02-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>
