--- a/book/src/main/resources-filtered/META-INF/resources/section/bom/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/section/bom/changelog.jspx
@@ -37,7 +37,7 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2019-06-11T02:41:43-0500"
-		dateModified="2020-08-28T19:15:50-05:00"
+		dateModified="2020-11-26T01:54:59-06:00"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.semanticcms:semanticcms-section-bom:pom.version}" />
@@ -57,6 +57,7 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 					<li>Updated version of <core:link book="/section/all" page="/index.jspx" />.</li>
 					<li>Updated version of <core:link book="/section/servlet" page="/index.jspx" />.</li>
 					<li>Updated version of <core:link book="/section/style" page="/index.jspx" />.</li>
+					<li>Updated version of <core:link book="/section/taglib" page="/index.jspx" />.</li>
 				</ul>
 			</changelog:release>
 		</c:if>
