--- a/book/src/main/resources-filtered/META-INF/resources/section/bom/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/section/bom/changelog.jspx
@@ -36,8 +36,8 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 		title="@{documented.name} Changelog"
 		shortTitle="Changelog"
 		tocLevels="1"
-		datePublished="2019-06-11T02:41:43-0500"
-		dateModified="2021-03-19T05:20:14-05:00"
+		datePublished="2019-06-11T02:41:43-05:00"
+		dateModified="2021-05-22T13:07:02-05:00"
 	>
 		<c:if test="${fn:endsWith('@{project.version}', '-SNAPSHOT') and !fn:endsWith('@{project.version}', '-POST-SNAPSHOT')}">
 			<changelog:release
@@ -46,7 +46,11 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 				groupId="@{project.groupId}"
 				artifactId="@{documented.artifactId}"
 				scmUrl="@{project.scm.url}"
-			/>
+			>
+				<ul>
+					<li>Updated to <ao:a rel="nofollow" href="https://www.oracle.com/java/technologies/javaee/javaeetechnologies.html#javaee7">Java™ EE 7 Web Profile</ao:a> (Servlet 3.1, JSP 2.3, EL 3.0, and JSTL 1.2).</li>
+				</ul>
+			</changelog:release>
 		</c:if>
 
 		<changelog:release
@@ -101,7 +105,7 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.4.0"
-			datePublished="2019-10-12T00:35:06-0500"
+			datePublished="2019-10-12T00:35:06-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -117,7 +121,7 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.3.0"
-			datePublished="2019-06-22T09:02:02-0500"
+			datePublished="2019-06-22T09:02:02-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
