--- a/book/src/main/resources-filtered/META-INF/resources/section/bom/index.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/section/bom/index.jspx
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-section-bom - Bill of Materials (BOM) for SemanticCMS Section features.
-Copyright (C) 2019, 2020  AO Industries, Inc.
+Copyright (C) 2019, 2020, 2021  AO Industries, Inc.
     support@aoindustries.com
     7262 Bull Pen Cir
     Mobile, AL 36695
@@ -34,7 +34,7 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 		title="@{documented.name}"
 		shortTitle="@{documented.shortTitle}"
 		description="@{documented.description}"
-		datePublished="2019-06-11T02:41:43-0500"
+		datePublished="2019-06-11T02:41:43-05:00"
 		dateModified="2020-03-24T14:01:33-05:00"
 	>
 		<core:child page="changelog" />
