--- a/book/src/main/resources-filtered/META-INF/resources/section/bom/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/section/bom/changelog.jspx
@@ -37,7 +37,7 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2019-06-11T02:41:43-05:00"
-		dateModified="2021-09-29T01:15:26-05:00"
+		dateModified="2021-10-18T21:28:07-05:00"
 	>
 		<c:if test="${fn:endsWith('@{project.version}', '-SNAPSHOT') and !fn:endsWith('@{project.version}', '-POST-SNAPSHOT')}">
 			<changelog:release
@@ -47,12 +47,21 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 				artifactId="@{documented.artifactId}"
 				repository="@{nexusUrl}content/repositories/snapshots/"
 				scmUrl="@{project.scm.url}"
-			>
-				<ul>
-					<li>Updated dependencies.</li>
-				</ul>
-			</changelog:release>
+			/>
 		</c:if>
+
+		<changelog:release
+			projectName="@{documented.name}"
+			version="1.7.1"
+			datePublished="2021-10-18T21:28:07-05:00"
+			groupId="@{project.groupId}"
+			artifactId="@{documented.artifactId}"
+			scmUrl="@{project.scm.url}"
+		>
+			<ul>
+				<li>Updated dependencies.</li>
+			</ul>
+		</changelog:release>
 
 		<changelog:release
 			projectName="@{documented.name}"
