--- a/book/src/main/resources-filtered/META-INF/resources/section/bom/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/section/bom/changelog.jspx
@@ -37,7 +37,7 @@ along with semanticcms-section-bom.  If not, see <https://www.gnu.org/licenses/>
     shortTitle="Changelog"
     tocLevels="1"
     datePublished="2019-06-11T02:41:43-05:00"
-    dateModified="2022-05-15T08:41:06-05:00"
+    dateModified="2023-10-06T04:43:29Z"
   >
     <c:set var="latestRelease" value="1.7.2" />
     <c:if test="${
@@ -52,7 +52,11 @@ along with semanticcms-section-bom.  If not, see <https://www.gnu.org/licenses/>
         artifactId="@{documented.artifactId}"
         repository="@{nexusUrl}content/repositories/snapshots/"
         scmUrl="@{project.scm.url}"
-      />
+      >
+        <ul>
+          <li><code>ElementTag.evaluateAttributes(…)</code> no longer throws <code>IOException</code>.</li>
+        </ul>
+      </changelog:release>
     </c:if>
 
     <changelog:release
